# solscan-parser

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  hashes.txt  pyproject.toml  requirements.txt
src/: main.py  main_speed.py
src/core/: config.py  logger.py
src/schemas/: parse_schemas.py
src/services/: google_sheets.py  solscan_parser.py
