[tool.poetry]
name = "solscan-parser"
version = "0.1.0"
description = "Simple Selenium Parser for Solscan with Google Sheets Integration. This project is a Selenium-based scraper that collects data from Solscan and saves it to a Google Sheet."
authors = ["alexmudrak <95851199+alexmudrak@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
undetected-chromedriver = "^3.5.5"
pydantic-settings = "^2.2.1"
google-api-python-client = "^2.122.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
